--- a/iOS/TasteSync/Classes/ViewControllers/RestaurantTab/RestaurantDetail/MoreInfo/ResMoreInfoVC.xib
+++ b/iOS/TasteSync/Classes/ViewControllers/RestaurantTab/RestaurantDetail/MoreInfo/ResMoreInfoVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4510" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4510" systemVersion="13A476u" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="1552" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
@@ -11,7 +11,6 @@
                 <outlet property="_phone" destination="28" id="44"/>
                 <outlet property="flagScroll" destination="ric-Yq-szo" id="Yd9-ZK-nxy"/>
                 <outlet property="lbName" destination="26" id="42"/>
-                <outlet property="mapView" destination="30" id="35"/>
                 <outlet property="view" destination="1" id="3"/>
                 <outlet property="viewInfo" destination="24" id="7so-AQ-WCx"/>
             </connections>
@@ -95,13 +94,6 @@
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         </view>
-                        <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" id="30">
-                            <rect key="frame" x="10" y="90" width="280" height="190"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <connections>
-                                <outlet property="delegate" destination="-1" id="36"/>
-                            </connections>
-                        </mapView>
                     </subviews>
                 </scrollView>
             </subviews>
